kubernetes/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: boxb-kafka
  name: kafka-broker0
spec:
  replicas: 1
  selector:
    matchLabels:
        app: boxb-kafka
        id: "0"
  template:
    metadata:
      labels:
        app: boxb-kafka
        id: "0"
    spec:
      containers:
      - name: boxb-kafka
        image: wurstmeister/kafka:latest
        ports:
        - containerPort: 9092
