kubernetes/weather-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather
    boxb: boxb-ground
  name: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
      boxb: boxb-ground
  template:
    metadata:
      labels:
        app: weather
        boxb: boxb-ground
    spec:
      containers:
      - image: boxb/weather:latest
        name: weather
        imagePullPolicy: IfNotPresent
