kubernetes/zookeeper-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zookeeper
#  boxb: boxb-ground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper-1
#     boxb: boxb-ground
  template:
    metadata:
      labels:
        app: zookeeper-1
#       boxb: boxb-ground
    spec:
      containers:
      - name: zoo1
        image: digitalwonderland/zookeeper
        ports:
        - containerPort: 2181
