kubernetes/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
  name: kafka
spec:
  ports:
  - port: 9092
    protocol: TCP
    targetPort: 9092
  selector:
    app: kafka
#  type: NodePort # Uncomment if doesnt match IP
