kubernetes/kafka.yml

# Deploy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: boxb-kafka
  name: kafka-broker0
spec:
  replicas: 1
  selector:
    matchLabels:
        app: boxb-kafka
        id: "0"
  template:
    metadata:
      labels:
        app: boxb-kafka
        id: "0"
    spec:
      containers:
      - name: boxb-kafka
        image: wurstmeister/kafka:latest
        ports:
        - containerPort: 9092
        readinessProbe:
          tcpSocket:
            port: 9092
          timeoutSeconds: 5
          periodSeconds: 5
          initialDelaySeconds: 40
        livenessProbe:
          tcpSocket:
            port: 9092
          timeoutSeconds: 5
          periodSeconds: 5
          initialDelaySeconds: 70

---

# Service
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    name: boxb-kafka
spec:
  ports:
    - port: 9092
      name: kafka-port
      protocol: TCP
  selector:
    app: boxb-kafka
    id: "0"
  type: LoadBalancer
