kubernetes/mongo.yml
# Deploy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
    boxb: boxb-ground
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
      boxb: boxb-ground
  template:
    metadata:
      labels:
        app: mongo
        boxb: boxb-ground
    spec:
      containers:
      - image: mongo
        name: mongo
        ports:
          - containerPort: 27017
---

# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  ports:
    - port: 27017
      protocol: TCP
      name: mongo-port
  selector:
    app: mongo
  type: LoadBalancer
#  type: NodePort # Uncomment if doesnt match IP
