kubernetes/weather-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather
  name: weather
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: weather
#  type: NodePort # Uncomment if doesnt match IP
