kubernetes/weather.yml
# Deploy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather
    boxb: boxb-ground
  name: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
      boxb: boxb-ground
  template:
    metadata:
      labels:
        app: weather
        boxb: boxb-ground
    spec:
      containers:
      - image: boxb/weather:latest
        name: weather
        imagePullPolicy: IfNotPresent
        ports:
            - containerPort: 80
---

# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather
  name: weather
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: weather
#  type: NodePort # Uncomment if doesnt match IP
