kubernetes/zookeeper-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper
  name: zookeeper
spec:
  ports:
  - port: 2181
    protocol: TCP
    targetPort: 2181
  selector:
    app: zookeeper
#  type: NodePort # Uncomment if doesnt match IP
