kubernetes/zookeeper.yml
# Deploy
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zookeeper
#  boxb: boxb-ground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper-1
#     boxb: boxb-ground
  template:
    metadata:
      labels:
        app: zookeeper-1
#       boxb: boxb-ground
    spec:
      containers:
      - name: zoo1
        image: digitalwonderland/zookeeper
        ports:
        - containerPort: 2181
        readinessProbe:
          tcpSocket:
            port: 2181
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 2181
          initialDelaySeconds: 10
          timeoutSeconds: 5

---

# Service
apiVersion: v1
kind: Service
metadata:
  name: zoo1
  labels:
    app: zookeeper-1
spec:
  ports:
    - name: client
      port: 2181
      protocol: TCP
    - name: follower
      port: 2888
      protocol: TCP
    - name: leader
      port: 3888
      protocol: TCP
  selector:
    app: zookeeper-1
