kubernetes/traefik-ingress.yml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
      name: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      tolerations:
        - effect: NoSchedule
          operator: Exists
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      containers:
        - image: traefik:2.1
          name: traefik-ingress-lb
          ports:
            - name: http
              containerPort: 80
              hostPort: 80

              # remove  8080 if unused
             - name: admin
             containerPort: 8080
             hostPort: 8080
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - --providers.kubernetesingress=true
            # you need to manually set this IP to the incoming public IP
            # that your ingress resources would use. Note it only affects
            # status and kubectl UI, and doesn't really do anything
            # It could even be left out https://github.com/containous/traefik/issues/6303
            - --providers.kubernetesingress.ingressendpoint.ip=127.0.0.1
            ## uncomment these and the ports above and below to enable
            ## the web UI on the host NIC port 8080 in **insecure** mode
           - --api.dashboard=true
           - --api.insecure=true
            - --log=true
            - --log.level=INFO
            - --accesslog=true
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
      # - protocol: TCP
      # port: 8080
      # name: admin
---
# Custom part

# see https://doc.traefik.io/traefik/v1.7/user-guide/kubernetes/#path-based-routing

# test on linux with
# echo "$(minikube ip) boxb-ground.minikube" | sudo tee -a /etc/hosts
# curl localhost/mission/ok

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: boxb-ground
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: localhost # maybe replace with boxb-ground.minikube ?
      http:
        paths:
          - path: /mission
            backend:
              serviceName: mission
              servicePort: http
          - path: /rocket
            backend:
              serviceName: rocket
              servicePort: http
          - path: /weather
            backend:
              serviceName: weather
              servicePort: http
          - path: /webcaster
            backend:
              serviceName: webcaster
              servicePort: http
